--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,14 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    {
+        "type": "bashdb",
+        "request": "launch",
+        "name": "Bash-Debug (type in script name)",
+        "cwd": "${workspaceFolder}",
+        "program": "${command:AskForScriptName}",
+        "args": []
+    },
         {
             "name":"from guide",
             "type": "godot",
